5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1592_2043.log
== TEST (2019-03-31 13:35:52) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = 
-- ERROR:
File "XXXX", line 5
    M = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:40:03) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = A * 1 + B * 2 + C * 3 + D * 4
P = M / 1 + 2 + 3 + 4

-- ERROR:
File "XXXX", line 5
    M = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:40:55) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = A * 1 + B * 2 + C * 3 + D * 4
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:41:21) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = A * 1 + B * 2 + C * 3 + D * 4
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- EXECUTION TIME:
0.200043
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:42:41) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = (A * 1) + (B * 2) + (C * 3) + (D * 4)
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:47:05) 
-- CODE:
A = input("1:")
B = input("2:")
C = input("3:")
D = input("4:")
M = (A * 1) + (B * 2) + (C * 3) + (D * 4)
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    P = M / 1 + 2 + 3 + 4
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:48:18) 
-- CODE:
A = input("1:")
B = input("2:")
C = input("3:")
D = input("4:")
M = float((A * 1) + (B * 2) + (C * 3) + (D * 4))
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    M = float((A * 1) + (B * 2) + (C * 3) + (D * 4))
ValueError: could not convert string to float: '88.58.57779999'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:16:45) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = (A * 1) + (B * 2) + (C * 3) + (D * 4)
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 20:12:01) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = (A * 1) + (B * 2) + (C * 3) + (D * 4)
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- EXECUTION TIME:
0.715353
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 20:12:03) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = (A * 1) + (B * 2) + (C * 3) + (D * 4)
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 20:29:51) 
-- CODE:
A = int(input("1:"))
B = int(input("2:"))
C = int(input("3:"))
D = int(input("4:"))
M = (A * 1) + (B * 2) + (C * 3) + (D * 4)
P = M / A + B + C + D
print(round(P, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 20:30:37) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = (A * 1) + (B * 2) + (C * 3) + (D * 4)
P = M / A + B + C + D
print(round(P, 2))
-- OUTPUT:
34.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 20:31:18) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = (A * 1) + (B * 2) + (C * 3) + (D * 4)
P = M / 1 + 2 + 3 + 4
print(round(P, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 20:34:54) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = ((A * 1) + (B * 2) + (C * 3) + (D * 4))/ 1 + 2 + 3 + 4

print(round(M, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 20:51:10) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = ((A * 1) + (B * 2) + (C * 3) + (D * 4))/ 1 + 2 + 3 + 4

print(round(M, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 20:51:16) 
-- CODE:
A = float(input("1:"))
B = float(input("2:"))
C = float(input("3:"))
D = float(input("4:"))
M = ((A * 1) + (B * 2) + (C * 3) + (D * 4))/ 1 + 2 + 3 + 4

print(round(M, 2))
-- EXECUTION TIME:
0.719352
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
